<resources>
    <string name="app_name">Krávy</string>

    <string name="activity_company">Firmy</string>
    <string name="activity_cow">Kráva</string>
    <string name="activity_record">Záznamy</string>
    <string name="activity_diagnosis">Diagnózy</string>
    <string name="activity_resource">Položky</string>
    <string name="activity_status">Označení</string>
    <string name="activity_export">Export</string>

    <string name="entry_company_count">%d krav</string>
    <string name="entry_record_count">Počet záznamů: %d</string>

    <string name="date">Datum:</string>
    <string name="date_start">Od: </string>
    <string name="date_end">Do: </string>
    <string name="date_repeat">Opakování:</string>

    <string name="section_history">Historie</string>
    <string name="section_comment">Komentář</string>
    <string name="section_settings">Nastavení</string>

    <string name="digits_numbers">0123456789</string>

    <string name="dialog_cow_collar">Zadejte číslo obojku:</string>
    <string name="dialog_cow_number">Zadejte číslo krávy:</string>
    <string name="dialog_cow_group">Zadejte skupinu krávy:</string>
    <string name="dialog_cow_add">Kráva nebyla nalezena v databázi, chcete ji přidat?</string>
    <string name="dialog_cow_delete">Opravdu chcete odstranit krávu \'%d\'?</string>
    <string name="dialog_treatment_old">Opravdu chcete upravit ošetření z \'%s\'?</string>
    <string name="dialog_treatment_delete">Opravdu chcete odstranit ošetření z \'%s\'?</string>
    <string name="dialog_treatment_type">Vyberte typ ošetření:</string>
    <string name="dialog_diagnosis_delete">Opravdu chcete odstanit diagnózu \'%s\'?</string>
    <string name="dialog_diagnosis_select">%s — Vyberte stav:</string>
    <string name="dialog_resources_select">%s — Vyberte položky:</string>
    <string name="dialog_resource_delete">Opravdu chcete odstanit položku \'%s\'?</string>
    <string name="dialog_status_toggle_add">Opravdu chcete přidat označení \'%s\'?</string>
    <string name="dialog_status_toggle_remove">Opravdu chcete odstranit označení \'%s\'?</string>
    <string name="dialog_status_delete">Opravdu chcete odstranit označení \'%s\'?</string>
    <string name="dialog_finger_select">%s — Vyberte diagnózu:</string>
    <string name="dialog_image_delete">Opravdu chcete obrázek odstranit?</string>
    <string name="dialog_company">Vyberte firmu:</string>
    <string name="dialog_company_delete">Opravdu chcete odstranit firmu \'%s\'?</string>
    <string name="dialog_company_cow_group">Skupina \'%s\'</string>
    <string name="dialog_export_exists">Soubor \'%s\' již existuje. Opravdu jej chcete přepsat?</string>
    <string name="dialog_export_success">Soubor \'%s\' úspěšně exportován!</string>
    <string name="dialog_export_error">Soubor \'%s\' se nepodařilo exportovat!</string>

    <string name="dialog_company_name">Název:</string>
    <string name="dialog_company_group">Skupina:</string>
    <string name="dialog_company_image">Obrázek:</string>

    <string name="dialog_diagnosis_name_new">Název — Nový:</string>
    <string name="dialog_diagnosis_name_treated">Název — Rozléčený:</string>
    <string name="dialog_diagnosis_name_healed">Název — Vyhojený:</string>
    <string name="dialog_diagnosis_name_short">Zkratka:</string>
    <string name="dialog_diagnosis_type">Typ:</string>

    <string name="dialog_resource_name">Název:</string>
    <string name="dialog_resource_type">Typ:</string>
    <string name="dialog_resource_layer">Vrstva:</string>
    <string name="dialog_resource_copying">Kopírování</string>
    <string name="dialog_resource_image">Obrázek:</string>
    <string name="dialog_resource_image_small">Malý obrázek:</string>

    <string name="dialog_status_name">Název:</string>
    <string name="dialog_status_image">Obrázek:</string>

    <string name="dialog_cancel">Zrušit</string>
    <string name="dialog_add">Přidat</string>
    <string name="dialog_continue">Pokračovat</string>
    <string name="dialog_select">Vybrat</string>
    <string name="dialog_submit">Potvrdit</string>
    <string name="dialog_export">Exportovat</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_no">Ne</string>
    <string name="dialog_yes">Ano</string>

    <string name="error_cow_number_empty">Číslo krávy nemůže být prázdné!</string>
    <string name="error_cow_number_length">Číslo krávy musí mít 6 znaků!</string>

    <string name="treatment_limp">Kulhá</string>
    <string name="treatment_whole">CÚP</string>
    <string name="treatment_repeat">Převaz</string>

    <string name="export_types">Exportovat ošetření:</string>
    <string name="export_resources">Exportovat položky:</string>

    <string name="diagnosis_healed">Vyhojený</string>
    <string name="diagnosis_treated">Rozléčený</string>
    <string name="diagnosis_new">Nový</string>

    <string name="diagnosis_type_none">—</string>
    <string name="diagnosis_type_finger">Prst</string>
    <string name="diagnosis_type_hoof">Pazneht</string>

    <string name="resource_type_none">—</string>
    <string name="resource_type_finger">Prst</string>
    <string name="resource_type_finger_inverted">Opačný prst</string>
    <string name="resource_type_hoof">Pazneht</string>

    <string name="mask_none" />
    <string name="mask_lf">LP</string>
    <string name="mask_lf_lf">LP-lp</string>
    <string name="mask_lf_rf">LP-pp</string>
    <string name="mask_rf">PP</string>
    <string name="mask_rf_lf">PP-lp</string>
    <string name="mask_rf_rf">PP-pp</string>
    <string name="mask_lb">LZ</string>
    <string name="mask_lb_lf">LZ-lp</string>
    <string name="mask_lb_rf">LZ-pp</string>
    <string name="mask_rb">PZ</string>
    <string name="mask_rb_lf">PZ-lp</string>
    <string name="mask_rb_rf">PZ-pp</string>

    <string name="export_treatment">Protokol</string>
    <string name="export_treatment_title">Protokol ošetření paznehtů</string>
    <string name="export_treatment_index">Index</string>
    <string name="export_treatment_number">Kráva</string>
    <string name="export_treatment_collar">Oboj.</string>
    <string name="export_treatment_group">Skup.</string>
    <string name="export_treatment_diagnosis">Diagnóza</string>
    <string name="export_treatment_target">Ošetř.</string>
    <string name="export_treatment_repeat">Opak.</string>
    <string name="export_treatment_extra">Poznámka</string>
    <string name="export_treatment_whole">Celková úprava paznehtů</string>
</resources>