<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cows="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/size_dialog"
    android:layout_height="wrap_content"
    android:background="@color/back_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/text_light"
                android:text="@string/dialog_resource_name" />

            <EditText
                android:id="@+id/dialog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/text_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/text_light"
                android:text="@string/dialog_resource_type" />

            <Spinner
                android:id="@+id/dialog_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/back_dark"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/text_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/text_light"
                android:text="@string/dialog_resource_layer" />

            <EditText
                android:id="@+id/dialog_layer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:digits="@string/digits_numbers"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/text_light" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/text_light"
                android:text="@string/dialog_resource_image" />

            <include layout="@layout/view_image_select"
                android:id="@+id/dialog_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"
                android:textColor="@color/text_light"
                android:text="@string/dialog_resource_image_small" />

            <include layout="@layout/view_image_select"
                android:id="@+id/dialog_image_small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <com.deloladrin.cows.views.ToggleTextView
            android:id="@+id/dialog_copying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:gravity="center"
            android:textSize="@dimen/text_medium"
            android:background="@color/button_dark"
            android:textColor="@color/text_light"
            cows:toggledColor="@color/text_tint"
            cows:strokeWidth="4"
            android:text="@string/dialog_resource_copying" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_dark"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_small"
            android:text="@string/dialog_cancel" />

        <Button
            android:id="@+id/dialog_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_tint"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_small"
            android:text="@string/dialog_submit" />

    </LinearLayout>

</LinearLayout>