<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/size_dialog"
    android:layout_height="wrap_content"
    android:background="@color/back_light"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_finger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_light" />

        <TextView
            android:id="@+id/dialog_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_small"
            android:textStyle="italic|bold"
            android:textColor="@color/text_dark"
            android:text="@string/section_comment" />

        <EditText
            android:id="@+id/dialog_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_healed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_healed"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_small"
            android:text="@string/diagnosis_healed" />

        <Button
            android:id="@+id/dialog_treated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_treated"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_small"
            android:text="@string/diagnosis_treated" />

        <Button
            android:id="@+id/dialog_new"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_new"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_small"
            android:text="@string/diagnosis_new" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_dark"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_small"
            android:text="@string/dialog_cancel" />

        <Button
            android:id="@+id/dialog_delete"
            android:layout_width="@dimen/size_cow_diagnosis_delete"
            android:layout_height="@dimen/size_cow_diagnosis_delete"
            android:layout_gravity="right"
            android:background="@drawable/icon_delete"
            android:backgroundTint="@color/button_bad"
            android:backgroundTintMode="screen" />

    </LinearLayout>

</LinearLayout>