<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cows="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/size_dialog"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/back_light"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/dialog_stage_collar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_collar_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_light" />

        <EditText
            android:id="@+id/dialog_collar_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="@string/digits_numbers"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_light" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_stage_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_number_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_light" />

        <TextView
            android:id="@+id/dialog_number_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:textSize="0pt"
            android:textColor="@color/text_bad" />

        <EditText
            android:id="@+id/dialog_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:digits="@string/digits_numbers"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_light" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_stage_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog_group_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_light" />

        <EditText
            android:id="@+id/dialog_group_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_medium"
            android:textColor="@color/text_light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_dark"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_small"
            android:text="@string/dialog_cancel" />

        <Button
            android:id="@+id/dialog_continue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/button_tint"
            android:textColor="@color/text_light"
            android:textSize="@dimen/text_small"
            android:text="@string/dialog_continue" />

    </LinearLayout>

</LinearLayout>